chore: add --enable-preview option