@@ -585,6 +585,15 @@
 
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <compilerArgs>
+                <arg>--enable-preview</arg>
+            </compilerArgs>
+        </configuration>
+    </plugin>
+      <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
         <version>5.5.0.6356</version>
@@ -679,7 +688,7 @@
                   -Duser.timezone=Europe/Rome
                   -Djava.awt.headless=true
                   -Dzimbra.config=it/data/zimbra-config/localconfig-test.xml
-                  -Dfile.encoding=UTF-8
+                  -Dfile.encoding=UTF-8 
               </argLine>
           </configuration>
           <executions>
